[package]
name = "advent_of_code_2023"
version = "0.13.1"
edition = "2021"
authors = ["Doppler Julian"]
repository = "https://github.com/DopplerJulian/Advent_of_Code_2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# lto = "fat"
# codegen-units = 1


[dependencies]
rayon = "1.8.0"
mimalloc = "*"
ndarray = { version = "0.15", features = ["rayon"] }
array-init = "2.1"
naga = "0.14.2"
chashmap-next = "2.2.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bigboy_benchmark"
harness = false
